[package]
name = "microcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
openssl-sys = "0.9"
openssl = "0.10"
display_bytes = "0.2.1"
to-binary = "0.4.0"
bs58 = "0.4.0"
hex = "0.4.3"
bincode = "1.3.3"
serde = "1.0.138"
serde_derive = "1.0.138"
